kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: abakus
spec:
  selector:
    app: abakus
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
