kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: abakus
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - abakus.djnd.si
        - abakus.danesjenovdan.si
      secretName: abakus-tls
  rules:
    - host: abakus.djnd.si
      http: &http_paths
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: abakus
                port:
                  number: 80
    - host: abakus.danesjenovdan.si
      http: *http_paths
